[build-system]
requires = [
    "poetry>=1.1.0"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ledpi-homeassistant-integration"
version = "0.0.0"
description = "Home Assistant Integration for LED-Pi (a Raspberry Pi WS2801 LED strip controller)."
license = "MIT"
authors = [
    "Daniel Muehlbachler-Pietrzykowski <daniel.muehlbachler@niftyside.io>"
]
readme = "README.md"
repository = "https://github.com/muhlba91/ledpi-homeassistant-integration"
keywords = [
    "ws2801",
    "ledpi",
    "raspberrypi",
    "homeassistant"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
webcolors = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = { extras = ["toml"], version = "^2.10.1" }
flakehell = "^0.9.0"
coverage = { extras = ["toml"], version = "^5.5" }
black = "^21.5b1"
pre-commit = "^2.12.1"
homeassistant = "^2021.5.3"
pytest-asyncio = "^0.15.1"
coveralls = "^3.0.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --cov=custom_components"
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
]

[tool.coverage.run]
relative_files = true
source = [
    "custom_components",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplemented()",
    "if __name__ == .__main__.:",
    "main()",
    "parser\\..",
    "argparse\\..",
]
fail_under = 93
show_missing = true

[tool.flakehell]
exclude = [
    "README.md"
]
format = "colored"
max_line_length = 88
show_source = true
whitelist = ".flake8.whitelist"
extended_default_ignore=[]

[tool.flakehell.plugins]
flake8-bandit = [
    "+*",
    "-S322"
]
flake8-bugbear = [
    "+*"
]
flake8-builtins = [
    "+*"
]
flake8-comprehensions = [
    "+*"
]
flake8-darglint = [
    "+*"
]
flake8-docstrings = [
    "+*"
]
flake8-eradicate = [
    "+*"
]
flake8-isort = [
    "+*"
]
flake8-mutable = [
    "+*"
]
flake8-pytest-style = [
    "+*"
]
flake8-spellcheck = [
    "+*"
]
mccabe = [
    "+*"
]
pep8-naming = [
    "+*"
]
pycodestyle = [
    "+*",
    "-E402",
    "-E126",
    "-W503",
    "-E203",
    "-E722"
]
pyflakes = [
    "+*"
]
pylint = [
    "+*",
    "-C0330",
    "-C0326"
]

[tool.black]
line-length = 88
target-version = [
    "py38"
]
include = "\\.pyi?$"
exclude = """
(
  /(
      \\.eggs         # exclude a few common directories in the
    | \\.git          # root of the project
    | \\.hg
    | \\.mypy_cache
    | \\.tox
    | \\.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
"""
